--- a/templates/ios/Example/PROJECT/Main.storyboard
+++ b/templates/ios/Example/PROJECT/Main.storyboard
@@ -8,7 +8,7 @@
         <!--View Controller-->
         <scene sceneID="wQg-tq-qST">
             <objects>
-                <viewController id="whP-gf-Uak" customClass="CPDViewController" sceneMemberID="viewController">
+                <viewController id="whP-gf-Uak" customClass="OWSDKViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="uEw-UM-LJ8"/>
                         <viewControllerLayoutGuide type="bottom" id="Mvr-aV-6Um"/>
